use argon2 function to hash passwords on register

--- a/server-lib/Cargo.toml
+++ b/server-lib/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+crypto = { path = "../crypto" }
+
 axum = { version = "0.7", features = ["json", "form"] }
 serde = { version = "1.0", features = ["derive"]}
