--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 argon2 = { version = "0.5" }
 rand_core = { version = "0.6", features = ["getrandom"] }
+aes-gcm = { version = "0.10"}
