add needed dependencies

--- a/server-lib/Cargo.toml
+++ b/server-lib/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2021"
 crypto = { path = "../crypto" }
 
 axum = { version = "0.7", features = ["json", "form"] }
-serde = { version = "1.0", features = ["derive"]}
+serde = { version = "1.0", features = ["derive"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid"] }
+uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
+chrono = { version = "0.4", features = ["now"] }
+rand = { version = "0.8" }
