--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 argon2 = { version = "0.5" }
 rand_core = { version = "0.6", features = ["getrandom"] }
 aes-gcm = { version = "0.10"}
+sha3 = { version = "0.10" }
