--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,5 +18,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
+    - name: Build Tauri
+      run: cargo tauri build --verbose
     - name: Run tests
       run: cargo test --verbose
