--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - name: Install dependencies
-      run: sudo apt-get install -y libgtk-3-dev
+      run: sudo apt-get install -y libgtk-3-dev libsoup2.4-dev
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
