--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - name: Install dependencies
       run: sudo apt-get install -y libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libappindicator3-dev librsvg2-dev
+    - name: Install tauri-cli
+      run: cargo install tauri-cli
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
